[package]
name = "serial_transporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.0"
async-std = "1.0"

zenoh = "0.7.0-rc"
prr_utils = {git = "https://github.com/PureRustRobot/prr_utils.git"}
prr_msgs = {git = "https://github.com/PureRustRobot/prr_msgs.git"}